:bug: Choices tab overflow / map padding

--- a/scss/components/_choices.scss
+++ b/scss/components/_choices.scss
@@ -522,6 +522,9 @@ $tps-choice-etape-2: 0.3s;
 					margin-top: 20px;
 				}
 			}
+			.map-container{
+				padding: 0 0 42%;
+			}
 		}
 	}
 	.content{
